fix: prevent cards flickering

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -59,6 +59,7 @@ a:hover {
   }
   &__img {
     vertical-align: middle;
+    min-height: 16.875rem;
   }
   &__content {
     padding: 1.875em 0;
