--- a/styles/_pets-page.scss
+++ b/styles/_pets-page.scss
@@ -28,6 +28,7 @@
 
     &__item {
       max-width: 16.875rem;
+      min-height: 27.1875rem;
     }
   }
 
